Add pages études + qualités

--- a/2016/css/syles.css
+++ b/2016/css/syles.css
@@ -64,3 +64,12 @@ a, a:hover, a:active, a:visited
 .jonas {
     background-color: #666666;
 }
+.theotime {
+    background-color: #dd0007;
+}
+.gwendal {
+    background-color: #0081dd;
+}
+.justino {
+    background-color: #183293;
+}
