--- a/2017/css/syles.css
+++ b/2017/css/syles.css
@@ -48,7 +48,7 @@ a, a:hover, a:active, a:visited
 
 .nom {
     padding: 10px 10px 10px 10px;
-    width: 110px;
+    width: 80px;
     text-align: left;
     background-color: #000000;
     color:#ffffff;
@@ -60,15 +60,36 @@ a, a:hover, a:active, a:visited
     padding: 10px 10px 10px 10px;
     text-align: left;
     color:#ffffff;
+    font-size: 14px;
+}
+
+@keyframes slidein {
+    from {
+        transform: scale(0);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .eleve {
     float: left;
     background-color: #cccccc;
     margin: 20px;
-    width: 130px;
-    height: 130px;
-    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+
+    transform: scale(0);
+    animation-duration: 0.3s;
+    animation-name: slidein;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .jonas {
